enfi-2015 Title without duplicate "EnFI 2015"

--- a/pages/enfi-2015.md
+++ b/pages/enfi-2015.md
@@ -1,7 +1,7 @@
 title: EnFI 2015 Conference
 
-EnFI 2015 -  Engineering of functional Interfaces
-=================================================
+Engineering of functional Interfaces
+====================================
 
 ![Logo](enfi-2015/logo.png)
 
