Maier is a Prof., fix enfi-logo path and reorder

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -3,7 +3,7 @@ title: EnFI 2015 Conference
 Engineering of functional Interfaces
 ====================================
 
-![Logo](enfi-2015/logo.png)
+![Logo](03_enfi-2015/logo.png)
 
 News
 ----
@@ -11,7 +11,7 @@ News
 ### Opening of Conference Website
 
 Datum | The EnFI-2015 website is now online available.
-Early birds may start [sending in abstracts](enfi-2015/abstractsubmission.html).
+Early birds may start [sending in abstracts](03_enfi-2015/abstractsubmission.html).
 
 ### Sponsors
 
