/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -5,6 +5,11 @@ Engineering of functional Interfaces
 
 ![Logo](03_enfi-2015/logo.png)
 
+The Conference Homepage will be online at the end of January.
+---
+
+
+<!--
 News
 ----
 
@@ -12,14 +17,13 @@ News
 
 Datum | The EnFI-2015 website is now online available.
 Early birds may start [sending in abstracts](03_enfi-2015/abstractsubmission.html).
-
 ### Sponsors
 
 Logos der Sponsoren und links zu deren Websites
 
 
 ***
-
+-->
 Contact
 -------
 
