/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -5,7 +5,7 @@ Engineering of functional Interfaces
 
 ![Logo](03_enfi-2015/logo.png)
 
-The Conference Homepage will be online at the end of January.
+The Conference Homepage will be online at the end of January 2015.
 ---
 
 
