/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -24,7 +24,7 @@ Logos der Sponsoren und links zu deren Websites
 
 ***
 -->
-Contact
+Contact Information
 -------
 
 ```
@@ -33,9 +33,8 @@ HNO-Klinik
 Medizinische Hochschule Hannover
 Feodor-Lynen-Straße 27
 30625 Hannover
-```
-
 <enfi-2015@mh-hannover.de>
 
 Bettina Goede
 Tel: 0511 532 7231
+```
