--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -33,7 +33,7 @@ HNO-Klinik
 Medizinische Hochschule Hannover
 Feodor-Lynen-Straße 27
 30625 Hannover
-<enfi-2015@mh-hannover.de>
+enfi-2015@mh-hannover.de
 
 Bettina Goede
 Tel: 0511 532 7231
