/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -3,7 +3,7 @@ title: EnFI 2015 Conference
 Engineering of functional Interfaces
 ====================================
 
-![Logo](03_enfi-2015/logo.png)
+![Logo EnFI 2015](03_enfi-2015/logo.png)
 
 The Conference Homepage will be online at the end of January 2015.
 ---
@@ -40,4 +40,4 @@ Tel: 0511 532 7231
 ```
 
 
-![Logo](03_enfi-2015/logofoerderverein.png)
+![Logo HNO Förderverein](03_enfi-2015/logofoerderverein.png)
