/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -48,5 +48,11 @@ Bettina Goede
 Tel: 0511 532 7231
 ```
 
+--------------------------------------------------------
+**With the kind support of:**
 
-![Logo HNO Förderverein](03_enfi-2015/logofoerderverein.png)
+
+
+[![Logo HNO Förderverein][1]][2]
+[1]: 03_enfi-2015/logofoerderverein.png
+[2]: https://www.mh-hannover.de/27918.html
