/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -25,7 +25,7 @@ News
 ### Opening of Conference Website
 
 Datum | The EnFI-2015 website is now online available.
-Early birds may start [sending in abstracts](03_enfi-2015/abstractsubmission.html).
+Early birds may start [sending in abstracts](03_enfi-2015/abstracts.html).
 ### Sponsors
 
 Logos der Sponsoren und links zu deren Websites
