/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -31,7 +31,7 @@ Feodor-Lynen-Straße 27
 enfi-2015@mh-hannover.de
 
 Bettina Goede
-Tel: 0511 532 7231
+Tel: +49 (0)511 532 7231
 ```
 
 --------------------------------------------------------
