/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -18,6 +18,18 @@ The organizers invite you for this interdisciplinary exchange of ideas amongst P
 
 We are looking forward to receive your contribution and welcome you as our guests!
 
+---
+**Topical Sessions**   
+
+
+* Bio/Chemical Sensors   
+* Interfaces to Life Science and Medicine   
+* Engineering on the Micro- and Nanoscale   
+* Functional Organics: Surfaces and Molecules   
+* Inorganic Films and Devices   
+
+---
+
 
 Contact Information
 -------
