/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -29,7 +29,7 @@ We are looking forward to receive your contribution and welcome you as our guest
 * Inorganic Films and Devices   
 
 ---
-
+[EnFI-Flyer](enfi2015flyer.pdf)  
 
 Contact Information
 -------
