/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -18,7 +18,7 @@ The organizers invite you for this interdisciplinary exchange of ideas amongst P
 
 We are looking forward to receive your contribution and welcome you as our guests!
 
-[EnFI-Flyer](enfi2015flyer.pdf)  
+[EnFI-Flyer](03_enfi-2015/enfi2015flyer.pdf)  
 
 ---
 **Topical Sessions**   
