--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -3,7 +3,7 @@ title: EnFI 2015 Conference
 Engineering of functional Interfaces
 ====================================
 
-![Logo EnFI 2015](03_enfi-2015/logoneu.png)
+![Logo EnFI 2015](03_enfi-2015/neueslogo.png)
 
 We are looking forward to receiving your abstracts until April 12th.
 ---
