/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -56,3 +56,7 @@ Tel: +49 (0)511 532 7231
 [![Logo HNO Förderverein][1]][2]
 [1]: 03_enfi-2015/logofoerderverein.png
 [2]: https://www.mh-hannover.de/27918.html
+
+[![Logo BlackRock Microsystems][3]][4]
+[3]: 03_enfi-2015/BRMELogoklein.jpg
+[4]: http://www.blackrockmicro.com/
