/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -57,6 +57,12 @@ Tel: +49 (0)511 532 7231
 [1]: 03_enfi-2015/logofoerderverein.png
 [2]: https://www.mh-hannover.de/27918.html
 
+[![Logo Advanced Bionics][5]][6]
+[5]: 03_enfi-2015/ABLogo.jpg
+[6]: http://www.advancedbionics.com/com/en/home.html
+
 [![Logo BlackRock Microsystems][3]][4]
 [3]: 03_enfi-2015/BRMELogoklein.jpg
 [4]: http://www.blackrockmicro.com/
+
+
