--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -5,7 +5,7 @@ Engineering of functional Interfaces
 
 ![Logo EnFI 2015](03_enfi-2015/neueslogo.png)
 
-We are looking forward to receiving your abstracts until April 12th.
+We are looking forward to receiving your abstracts until April <s>12th</s> 28th.
 ---
 
 Modern medicine, engineering and information technology have one fact in common: They all rely on materials interfaces that provide additional functionalities. This holds not only for ceramic hip joints but equally well for biochemical sensors in bioreactors or nanoelectronic processors - just to name a few examples. However, each scientific discipline has its own sight on these interfaces, emphasizes one property more than others and, not at last, its own scientific language and theoretical models. For young scientists who are working in these interdisciplinary, overlapping fields such as active prostheses, biochemical sensors or brain-computer interfaces this “Babylonic language confusion” is an extra burden to overcome.
