/ ‘pages/03_enfi-2015.md’

--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -6,7 +6,7 @@ Engineering of functional Interfaces
 ![Logo EnFI 2015](03_enfi-2015/neueslogo.png)
 
 
-We are looking forward to receiving your abstracts until April <s>12th</s> 28th.
+REMINDER: The Early Bird Deadline is on June 5th 
 ---
 
 New Conference Location: MHH, Building J1, Lecture Hall R
