--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -6,7 +6,7 @@ Engineering of functional Interfaces
 ![Logo EnFI 2015](03_enfi-2015/neueslogo.png)
 
 
-REMINDER: The Early Bird Deadline is on June 5th 
+Please remember to register for the conference 
 ---
 
 New Conference Location: MHH, Building J1, Lecture Hall R
