--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -6,7 +6,9 @@ Engineering of functional Interfaces
 ![Logo EnFI 2015](03_enfi-2015/neueslogo.png)
 
 
-Please remember to register for the conference 
+Thank you all for a great conference!
+![Gruppenfoto](03_enfi-2015/Gruppenfoto.jpg)
+
 ---
 
 New Conference Location: MHH, Building J6, Lecture Hall R
