--- a/pages/03_enfi-2015.md
+++ b/pages/03_enfi-2015.md
@@ -6,7 +6,8 @@ Engineering of functional Interfaces
 ![Logo EnFI 2015](03_enfi-2015/neueslogo.png)
 ---
 
-**Thank you all for a great conference!**
+Thank you all for a great conference!
+---
 
 ![Gruppenfoto](03_enfi-2015/Gruppenfoto.jpg)
 
