--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -1,5 +1,8 @@
-title: Inner Ear Biology Meeting 2017, Hannover
+title: Inner Ear Biology Meeting 2017
 
 <!-- adding a "title: ..." atop defines how this pages should show up in the menu. Otherwise just the file/dir name would be used -->
 
-## Details will be added here... stay tuned.
+
+## Inner Ear Biology Meeting 2017, Hannover
+
+Details will be added here... stay tuned.
