--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -1,8 +1,9 @@
 title: Inner Ear Biology Meeting 2017
 
-<!-- adding a "title: ..." atop defines how this pages should show up in the menu. Otherwise just the file/dir name would be used -->
+<!-- adding a "title: ..." atop defines how this pages should show up in the menu. Otherwise just the file/dir name would be used.
+The title is also shown in big above the page on vianna.de (not on github) -->
 
 
-## Inner Ear Biology Meeting 2017, Hannover
+## Hannover
 
 Details will be added here... stay tuned.
