--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -6,4 +6,9 @@ The title is also shown in big above the page on vianna.de (not on github) -->
 
 ## Hannover
 
+![Logo IEB](Logo.png){.img-rounded}
+
+Welcome to the Inner Ear Biology 2017 in Hannover.
+
+
 Details will be added here... stay tuned.
