--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -6,7 +6,7 @@ The title is also shown in big above the page on vianna.de (not on github) -->
 
 ## Hannover
 
-![Logo IEB](Logo.png){.img-rounded}
+![Logo IEB](Logo.png){style="width:33%"}
 
 Welcome to the Inner Ear Biology 2017 in Hannover.
 
