--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -1,10 +1,10 @@
-title: Inner Ear Biology Meeting 2017
+title: 54th Workshop on Inner Ear Biology and Symposium 2017
 
 <!-- adding a "title: ..." atop defines how this pages should show up in the menu. Otherwise just the file/dir name would be used.
 The title is also shown in big above the page on vianna.de (not on github) -->
 
 
-## Hannover
+## 9<sup>th</sup> - 12<sup>th</sup> September 2017 in Hannover
 
 ![Logo IEB](Logo.png){style="width:33%"}
 
