--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -30,17 +30,17 @@ PD. Dr. Athanasia Warnecke
 ### Contact Information
 -------------------
 
-> Hannover Medical School
-> Department of Otorhinolaryngology
-> Carl-Neuberg-Str. 1
-> 30625 Hannover
+Hannover Medical School
+Department of Otorhinolaryngology
+Carl-Neuberg-Str. 1
+30625 Hannover
 
-> Regina Müller
-> Tel: +49 (0)511 532 3026
-> Fax: +49 (0)511 532 5558
+Regina Müller
+Tel: +49 (0)511 532 3026
+Fax: +49 (0)511 532 5558
 
-> [mueller.regina@mh-hannover.de](mailto:mueller.regina@mh-hannover.de)
-> [www.mhh-hno.de](http://www.mhh-hno.de)
+[mueller.regina@mh-hannover.de](mailto:mueller.regina@mh-hannover.de)
+[www.mhh-hno.de](http://www.mhh-hno.de)
 
 
 
