--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -13,10 +13,13 @@ Welcome to the Website of the Inner Ear Biology Meeting 2017!
 
 We take over the relay and continue the tradition of the meeting that has the longest history in auditory research. 
 
-The first Inner Ear Biology meeting took place in Nov. 6-7, 1964. 
-It was organized by Prof. S. Rauch and Prof. A. Meyer zu Gottesberge in Düsseldorf, Germany. This was 7 years before the first Society of Neuroscience meeting and 12 years before the first meeting of the Association for Research in Otolaryngology took place. 
+The first Inner Ear Biology meeting took place in Nov. 6-7, 1964. It was organized by Prof. S. Rauch and Prof. A. Meyer zu Gottesberge in Düsseldorf, Germany. 
 
-In 2017, we want to provide a platform for an excellent scientific interchange, and want to introduce you to the city of Hannover, founded in 12 century, a city of long history but also the place of the struggle for survival after the heavy destruction during WW2. Our city's most important child, Gottfried Leibniz, has developed here many of ideas that changed the world of science - including the binary calculus. William Herschel, the astronomer, Emile Berliner, the inventor of the gramophone, and Walter Bruch, the inventor of the color TV, were all born here. Hannover has the largest city forrest, the wonderful royal gardens of Herrenhausen, close is the medieval city of Celle, a nearby abbey of Weinhausen from 12th century - a jewel and a must for the interested visitor. Hannover kings ruled also the United Kingdom for several generations. We are no longer a kingdom; the Hannover kings do not ‘rule the world’, but Hannover has become an outstanding place for science. In this tradition we are proud to may organize the Inner Ear Biology 2017.  
+This was 7 years before the first Society of Neuroscience meeting and 12 years before the first meeting of the Association for Research in Otolaryngology took place. 
+
+In 2017, we want to provide a platform for an excellent scientific interchange, and want to introduce you to the city of Hannover and the region around it. The city was founded in 12th century and you can see the long history on many buildings in the city center. Hannover has the largest city forrest in Europe, splendid royal gardens of Herrenhausen built after the blueprint of Versailles. Hannover is close to the medieval city of Celle, a nearby abbey of Weinhausen from 12th century - with handwritten books and tapestries from that time - a jewel and a must for the interested visitor. Our city's most important child, Gottfried Leibniz, has developed here many of ideas that changed the world of science - including the binary calculus. William Herschel, the astronomer, Emile Berliner, the inventor of the gramophone, and Walter Bruch, the inventor of the PAL color TV, were all born here. Hannover kings ruled also the United Kingdom for several generations. We are no longer a kingdom - the Hannover kings do not ‘rule the world’, but Hannover has continued being an outstanding place for science and technology. 
+
+In this tradition we are proud to may organize the Inner Ear Biology 2017.  
 
 Details for abstract submission will follow in 2017. Hope to see you in Hannover!
 
