--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -33,6 +33,7 @@ Dr. Maria Höfer
 Prof. Dr. Dr. Andrej Kral
 Prof. Prof. h.c. Dr. Thomas Lenarz
 Prof. Dr. Hannes Maier
+Prof. Dr. Waldo Nogeira
 Dr. Gerrit Paasche
 PD Dr. Athanasia Warnecke
 
