Made headings in IEB a bit smaller

--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -3,14 +3,13 @@ title: Inner Ear Biology 2017
 <!-- adding a "title: ..." atop defines how this pages should show up in the menu. Otherwise just the file/dir name would be used.
 The title is also shown in big above the page on vianna.de (not on github) -->
 
-# 54th Workshop on Inner Ear Biology and Symposium 2017
+## 54th Workshop on Inner Ear Biology and Symposium 2017
 
-## 13<sup>th</sup> - 16<sup>th</sup> September 2017 in Hannover
+### 13<sup>th</sup> - 16<sup>th</sup> September 2017 in Hannover
 
 ![Logo IEB](Logo.png){style="width:33%"}
 
-# INTERVENTIONS IN THE EAR: from inner ear biology to advanced therapy of hearing loss
-
+### INTERVENTIONS IN THE EAR: from inner ear biology to advanced therapy of hearing loss
 
 Welcome to the Website of the Inner Ear Biology Meeting 2017! 
 
