--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -13,6 +13,8 @@ The title is also shown in big above the page on vianna.de (not on github) -->
 
 Welcome to the Website of the Inner Ear Biology Meeting 2017! 
 
+- [Download the flyer!](./02_IEB-2017/IEB-2017-09-13--16-flyer.pdf)
+
 We take over the relay and continue the tradition of the meeting that has the longest history in auditory research. 
 
 The first Inner Ear Biology meeting took place in Nov. 6-7, 1964. It was organized by Prof. S. Rauch and Prof. A. Meyer zu Gottesberge in Düsseldorf, Germany. 
