--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -3,7 +3,7 @@ title: Inner Ear Biology 2017
 <!-- adding a "title: ..." atop defines how this pages should show up in the menu. Otherwise just the file/dir name would be used.
 The title is also shown in big above the page on vianna.de (not on github) -->
 
-## 54th Workshop on Inner Ear Biology and Symposium 2017
+## 54<sup>th</sup> Workshop on Inner Ear Biology and Symposium 2017
 
 ### 13<sup>th</sup> - 16<sup>th</sup> September 2017 in Hannover
 
@@ -12,8 +12,6 @@ The title is also shown in big above the page on vianna.de (not on github) -->
 ### INTERVENTIONS IN THE EAR: from inner ear biology to advanced therapy of hearing loss
 
 Welcome to the Website of the Inner Ear Biology Meeting 2017! 
-
-- [Download the flyer!](./02_IEB-2017/IEB-2017-09-13--16-flyer.pdf)
 
 We take over the relay and continue the tradition of the meeting that has the longest history in auditory research. 
 
@@ -30,31 +28,36 @@ Details for abstract submission will follow in 2017. Hope to see you in Hannover
 Thomas Lenarz & Andrej Kral
 Chairs of the IEB 2017
 
--------------------
+
+### Downloads
+
+- [Get the flyer!](./02_IEB-2017/IEB-2017-09-13--16-flyer.pdf)
+
+
+
+
 ### Organizing Committee
--------------------
-Dr. Maria Höfer
-Prof. Dr. Dr. Andrej Kral
-Prof. Prof. h.c. Dr. Thomas Lenarz
-Prof. Dr. Hannes Maier
-Prof. Dr. Waldo Nogeira
-Dr. Gerrit Paasche
-PD Dr. Athanasia Warnecke
+
+- Dr. Maria Höfer
+- Prof. Dr. Dr. Andrej Kral
+- Prof. Prof. h.c. Dr. Thomas Lenarz
+- Prof. Dr. Hannes Maier
+- Prof. Dr. Waldo Nogeira
+- Dr. Gerrit Paasche
+- PD Dr. Athanasia Warnecke
 
 
--------------------
 
 ### Contact Information
--------------------
 
-Regina Müller
-Hannover Medical School
-Department of Otorhinolaryngology
-Carl-Neuberg-Str. 1
-30625 Hannover
-
-Tel: +49 (0)511 532 3026
-Fax: +49 (0)511 532 5558
+    Regina Müller
+    Hannover Medical School
+    Department of Otorhinolaryngology
+    Carl-Neuberg-Str. 1
+    30625 Hannover
+    
+    Tel: +49 (0)511 532 3026
+    Fax: +49 (0)511 532 5558
 
 [mueller.regina@mh-hannover.de](mailto:mueller.regina@mh-hannover.de)
 [www.mhh-hno.de](http://www.mhh-hno.de)
