IEB 2017: let the text float around the logo

--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -7,7 +7,7 @@ The title is also shown in big above the page on vianna.de (not on github) -->
 
 ### 13<sup>th</sup> - 16<sup>th</sup> September 2017 in Hannover
 
-![Logo IEB](Logo.png){style="width:33%"}
+![Logo IEB](Logo.png){style="width:33%; float:left"}
 
 ### INTERVENTIONS IN THE EAR: from inner ear biology to advanced therapy of hearing loss
 
@@ -59,8 +59,8 @@ Chairs of the IEB 2017
     Tel: +49 (0)511 532 3026
     Fax: +49 (0)511 532 5558
 
-[mueller.regina@mh-hannover.de](mailto:mueller.regina@mh-hannover.de)
-[www.mhh-hno.de](http://www.mhh-hno.de)
+- eMail contat [mueller.regina@mh-hannover.de](mailto:mueller.regina@mh-hannover.de)
+- Homepage ENT department Hannover [www.mhh-hno.de](http://www.mhh-hno.de)
 
 
 
