IEB2017: Add link to EasyChair submission site

--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -29,6 +29,13 @@ Thomas Lenarz & Andrej Kral
 Chairs of the IEB 2017
 
 
+### Submission
+
+We use EasyChair for handling submissions.
+
+[login and submit](https://easychair.org/conferences/?conf=ieb2017)
+
+
 ### Downloads
 
 - [Get the flyer!](./02_IEB-2017/IEB-2017-09-13--16-flyer.pdf)
@@ -61,6 +68,5 @@ Chairs of the IEB 2017
 
 - eMail contat [mueller.regina@mh-hannover.de](mailto:mueller.regina@mh-hannover.de)
 - Homepage ENT department Hannover [www.mhh-hno.de](http://www.mhh-hno.de)
-
 
 
