--- a/pages/CAL2017.md
+++ b/pages/CAL2017.md
@@ -3,7 +3,7 @@ status: hidden
 
 # Closing the Auditory (efferent) Loop II
 
-![Logo CAL 2017](02_cal-symposium-2015/cal23.png){style="width:27%"}
+![Logo CAL 2017](cal23.png){style="width:27%"}
 
 <br style="clear:both">
 
