--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -2,7 +2,7 @@ title: CAL Symposium 2017
 
 # Closing the Auditory (efferent) Loop II
 
-![Logo CAL 2017](cal23.png){style="width:27%"}
+![Logo CAL 2017](03_CAL2017/cal23.png)
 
 <br style="clear:both">
 
@@ -18,7 +18,7 @@ As we come from existing clinical practice, we reflect mature hearing aids or re
 
 
 
-<!--- ![Schloss Herrenhausen](02_cal-symposium-2015/ssh_cropped.png){.img-rounded}--->
+<!-- ![Schloss Herrenhausen](02_cal-symposium-2015/ssh_cropped.png){.img-rounded} -->
 
 ### Aims and Execution
 
