--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -4,9 +4,13 @@ title: CAL Symposium 2017
 
 ![Logo CAL 2017](03_CAL2017/cal23.png){.left}
 
+![Logo CAL 2017](03_CAL2017/cal23.png){style="width:33%; float:left; margin-right:3em;"}
+
+## MAY 10th - 12th 2017 in Krems, Austria
+
 <br style="clear:both">
 
-**MAY 10th - 12th 2017 in Krems, Austria**
+
 
 ### About
 
