--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -15,12 +15,24 @@ title: CAL Symposium 2017
 
 
 ### About
-
-In the future of hearing aids and implants, which actually help deaf new-borns as well as the aging society, Brain Computer Interfaces will once be needed to make a last big leap to full hearing restoration. It will achieve, in a nutshell, the revived cocktail party capability. However this may take us 10 to 15 years from now. While both academia and industry are convinced that such solutions will truly appear, many currently refrain from entering this transdisciplinary, long and unknown field of research and development.
-
-Similar to last centuries’ computer chip development, a road mapping action can pave such a way. It will define challenges, critical experiments and milestones on a pre-competitive basis. New research collaborations as well as joint funding programs are initiated.
-
-As we come from existing clinical practice, we reflect mature hearing aids or restauration systems and pursue precisely defined objectives. Thus our activity can be seen distinct from other BCI road mapping activities of more general and philosophical nature.
+In the future of hearing aids and implants, which actually help deaf 
+newborns as well as the aging society, Brain Computer Interfaces will once 
+be needed to make a last big leap to full hearing restoration. While for 
+hearing aids some activities are in midst of being started, ideas for 
+implantable hearing devices remain vague. Our symposium wants to shed some 
+light on possible approaches from different points of view and areas of 
+research. As a follow up to the 2015 meeting held in Hannover Castle we 
+reconvene in Krems, a location close to Vienna at the Danube River in the 
+wonderful UNESCO World Cultural Heritage Wachau. It is overseen by castles 
+and monasteries like Göttweig, where we will have one of the evening 
+events. Scientifically we will catch up with recent advances in the 
+specific field and discuss advantages of intracranial approaches over 
+recent EEG recording techniques. Moreover, we want to foster ongoing 
+activities for experts in- and outside the European Union and define 
+action lines towards a specific roadmap. The symposium is held under the 
+auspices of the newly inaugurated Karl-Landsteiner University and is 
+co-sponsored by the state of Lower Austria.
+.
 
 
 
@@ -52,7 +64,6 @@ culture and politics.
 Contact Information
 -------------------
 
-
 > Biomaterial Engineering
 > HNO-Klinik
 > Medizinische Hochschule Hannover
@@ -60,19 +71,21 @@ Contact Information
 > 30625 Hannover
 > [biomaterialengineering@mh-hannover.de](mailto:biomaterialengineering@mh-hannover.de)
 
-
-
+>Translationale Medizintechnik
+>Fraunhofer ITEM
+>Dr. Ulrich Froriep
+>Nikolai-Fuchs-Str. 1 (Haupteingang am Stadtfelddamm)
+>30625 Hannover
+>Tel: 0511-5350-294
+>ulrich.froriep@item.fraunhofer.de
 
 ------------------------
 ### Organizing Committee
 
-<!--
-- Marlies Knipper, Department for Molecular Physiology of Hearing, Hearing Research Centre Tübingen, Germany
-- Stefan Debener, Department for Neuropsychology, University Oldenburg, Germany
-- Theodor Doll, BioMaterial Engineering, Medical School Hannover, Germany
-- Maria Höfer, BioMaterial Engineering, Medical School Hannover, Germany
-- Thomas Lenarz, ENT Department, Medical School Hannover, Germany
--->
+Prof. Dr. Theodor Doll, Hannover Medical School
+Dr. Ulrich Froriep, Fraunhofer ITEM 
+Prim. Prof. Dr. Georg Sprinzl, Universitätsklinikum St. Pöten
+Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 
 ----------------------------
 ### With the kind support of
