--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -72,5 +72,5 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 
 ![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}
 
-![Logo MHH](MHH-Logo.png){.img-rounded}
+![Logo MHH](03_CAL2017/mhhlogo.png)
 
