--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -13,6 +13,8 @@ title: CAL Symposium 2017
 <br style="clear:both">
 
 
+{style="width:33%;}
+
 
 ### About
 In the future of hearing aids and implants, which actually help deaf 
@@ -70,7 +72,26 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 ----------------------------
 ### With the kind support of
 
-![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}
+[![Logo Hearing4all][1]][2]
+[1]: 03_past-events/02_cal-symposium-2015/h4a_logo_long3.png
+[2]: http://hearing4all.eu/DE/
 
-![Logo MHH](03_CAL2017/mhhlogo.png)
+<!--![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}-->
+
+[![Logo MHH][3]][4]
+[3]: 03_CAL2017/mhhlogo.png
+[4]: https://www.mh-hannover.de/
+
+<!--![Logo MHH](03_CAL2017/mhhlogo.png)-->
+
+[![Logo Life Science Calls][5]][6]
+[5]: 03_CAL2017/lsc.png
+[6]: http://www.nfb.at/forschung/foerderung/life-science-calls/
+
+
+[![Logo UK St. Pölten][7]][8]
+[7]: 03_CAL2017/ukstpoelten.png
+[8]: http://www.stpoelten.lknoe.at/
+
+
 
