--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -13,27 +13,9 @@ title: CAL Symposium 2017
 <br style="clear:both">
 
 
-{style="width:33%;}
-
 
 ### About
-In the future of hearing aids and implants, which actually help deaf 
-newborns as well as the aging society, Brain Computer Interfaces will once 
-be needed to make a last big leap to full hearing restoration. While for 
-hearing aids some activities are in midst of being started, ideas for 
-implantable hearing devices remain vague. Our symposium wants to shed some 
-light on possible approaches from different points of view and areas of 
-research. As a follow up to the 2015 meeting held in Hannover Castle we 
-reconvene in Krems, a location close to Vienna at the Danube River in the 
-wonderful UNESCO World Cultural Heritage Wachau. It is overseen by castles 
-and monasteries like Göttweig, where we will have one of the evening 
-events. Scientifically we will catch up with recent advances in the 
-specific field and discuss advantages of intracranial approaches over 
-recent EEG recording techniques. Moreover, we want to foster ongoing 
-activities for experts in- and outside the European Union and define 
-action lines towards a specific roadmap. The symposium is held under the 
-auspices of the newly inaugurated Karl-Landsteiner University and is 
-co-sponsored by the state of Lower Austria.
+In the future of hearing aids and implants, which actually help deaf newborns as well as the aging society, Brain Computer Interfaces will once be needed to make a last big leap to full hearing restoration. While for hearing aids some activities are in midst of being started, ideas for implantable hearing devices remain vague. Our symposium wants to shed some light on possible approaches from different points of view and areas of research. As a follow up to the 2015 meeting held in Hannover Castle we reconvene in Krems, a location close to Vienna at the Danube River in the wonderful UNESCO World Cultural Heritage Wachau. It is overseen by castles and monasteries like Göttweig, where we will have one of the evening events. Scientifically we will catch up with recent advances in the specific field and discuss advantages of intracranial approaches over recent EEG recording techniques. Moreover, we want to foster ongoing activities for experts in- and outside the European Union and define action lines towards a specific roadmap. The symposium is held under the auspices of the newly inaugurated Karl-Landsteiner University and is co-sponsored by the state of Lower Austria.
 .
 
 
@@ -72,11 +54,6 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 ----------------------------
 ### With the kind support of
 
-[![Logo Hearing4all][1]][2]
-[1]: pages/03_past-events/02_cal-symposium-2015/h4a_logo_long3.png
-[2]: http://hearing4all.eu/DE/
-
-<!--![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}-->
 
 [![Logo MHH][3]][4]
 [3]: pages/03_CAL2017/mhhlogo.png
@@ -84,14 +61,25 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 
 <!--![Logo MHH](03_CAL2017/mhhlogo.png)-->
 
-[![Logo Life Science Calls][5]][6]
-[5]: pages/03_CAL2017/lsc.png
-[6]: http://www.nfb.at/forschung/foerderung/life-science-calls/
-
 
 [![Logo UK St. Pölten][7]][8]
 [7]: pages/03_CAL2017/ukstpoelten.png
 [8]: http://www.stpoelten.lknoe.at/
 
+[![Logo Life Science Calls][5]][6]
+[5]: pages/03_CAL2017/lsc.png
+[6]: http://www.nfb.at/forschung/foerderung/life-science-calls/
+
+[![Logo Life Science Calls][9]][10]
+[9]: pages/03_CAL2017/kluni.png
+[10]: http://www.kl.ac.at/
+
+
+
+[![Logo Hearing4all][1]][2]
+[1]: pages/03_past-events/02_cal-symposium-2015/h4a_logo_long3.png
+[2]: http://hearing4all.eu/DE/
+
+<!--![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}-->
 
 
