--- a/pages/03_CAL2017.md
+++ b/pages/03_CAL2017.md
@@ -56,22 +56,22 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 
 
 [![Logo MHH][3]][4]
-[3]: pages/03_CAL2017/mhhlogo.png
+[3]: 03_CAL2017/mhhlogo.png
 [4]: https://www.mh-hannover.de/
 
 <!--![Logo MHH](03_CAL2017/mhhlogo.png)-->
 
 
 [![Logo UK St. Pölten][7]][8]
-[7]: pages/03_CAL2017/ukstpoelten.png
+[7]: 03_CAL2017/ukstpoelten.png
 [8]: http://www.stpoelten.lknoe.at/
 
 [![Logo Life Science Calls][5]][6]
-[5]: pages/03_CAL2017/lsc.png
+[5]: 03_CAL2017/lsc.png
 [6]: http://www.nfb.at/forschung/foerderung/life-science-calls/
 
-[![Logo Life Science Calls][9]][10]
-[9]: pages/03_CAL2017/kluni.png
+[![Logo Karl Landsteiner Privatuniversität][9]][10]
+[9]: 03_CAL2017/kluni.png
 [10]: http://www.kl.ac.at/
 
 
