Remove easy-chair abstract submission and instead link to official ieb2017.com

--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -23,24 +23,15 @@ In 2017, we want to provide a platform for an excellent scientific interchange, 
 
 In this tradition we are proud to may organize the Inner Ear Biology 2017.  
 
-Details for abstract submission will follow in 2017. Hope to see you in Hannover!
+Details for abstract submission on the IEB Homepage: [IEB 2017 website](https://ieb2017.com)
 
 Thomas Lenarz & Andrej Kral
 Chairs of the IEB 2017
 
 
-### Submission
-
-We use EasyChair for handling submissions.
-
-[login and submit](https://easychair.org/conferences/?conf=ieb2017)
-
-
 ### Downloads
 
 - [Get the flyer!](./02_IEB-2017/IEB-2017-09-13--16-flyer.pdf)
-
-
 
 
 ### Organizing Committee
