--- a/pages/02_IEB-2017.md
+++ b/pages/02_IEB-2017.md
@@ -31,7 +31,7 @@ Chairs of the IEB 2017
 
 ### Downloads
 
-- [Get the flyer!](./02_IEB-2017/ieb_flyer.pdf)
+- [Get the flyer!](./02_ieb-2017/ieb_flyer.pdf)
 
 
 ### Organizing Committee
