--- a/pages/03_past-events/03_CAL2017.md
+++ b/pages/03_past-events/03_CAL2017.md
@@ -4,7 +4,7 @@ title: CAL Symposium 2017
 
 
 
-![Logo CAL 2017](03_CAL2017/cal23.png){style="width:33%; float:left; margin-right:3em;"}
+![Logo CAL 2017](03_cal2017/cal23.png){style="width:33%; float:left; margin-right:3em;"}
 
 
 
