Update and rename 04_IEB-2017.md to 04_ieb-2017.md

--- a/pages/03_past-events/04_ieb-2017.md
+++ b/pages/03_past-events/04_ieb-2017.md
@@ -7,7 +7,7 @@ The title is also shown in big above the page on vianna.de (not on github) -->
 
 ### 13<sup>th</sup> - 16<sup>th</sup> September 2017 in Hannover
 
-![Logo IEB](04_IEB-2017/ieblogo.png){style="width:33%; float:left; margin-right:3em;"}
+![Logo IEB](04_ieb-2017/ieblogo.png){style="width:33%; float:left; margin-right:3em;"}
 
 ### INTERVENTIONS IN THE EAR: from inner ear biology to advanced therapy of hearing loss
 
