--- a/pages/03_past-events/03_cal2017.md
+++ b/pages/03_past-events/03_cal2017.md
@@ -56,28 +56,28 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 
 
 [![Logo MHH][3]][4]
-[3]: 03_CAL2017/mhhlogo.png
+[3]: 03_cal2017/mhhlogo.png
 [4]: https://www.mh-hannover.de/
 
 <!--![Logo MHH](03_CAL2017/mhhlogo.png)-->
 
 
 [![Logo UK St. Pölten][7]][8]
-[7]: 03_CAL2017/ukstpoelten.png
+[7]: 03_cal2017/ukstpoelten.png
 [8]: http://www.stpoelten.lknoe.at/
 
 [![Logo Life Science Calls][5]][6]
-[5]: 03_CAL2017/lsc.png
+[5]: 03_cal2017/lsc.png
 [6]: http://www.nfb.at/forschung/foerderung/life-science-calls/
 
 [![Logo Karl Landsteiner Privatuniversität][9]][10]
-[9]: 03_CAL2017/kluni.png
+[9]: 03_cal2017/kluni.png
 [10]: http://www.kl.ac.at/
 
 
 
 [![Logo Hearing4all][1]][2]
-[1]: pages/03_past-events/02_cal-symposium-2015/h4a_logo_long3.png
+[1]: ../02_cal-symposium-2015/h4a_logo_long3.png
 [2]: http://hearing4all.eu/DE/
 
 <!--![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}-->
