--- a/pages/03_past-events/03_cal2017.md
+++ b/pages/03_past-events/03_cal2017.md
@@ -77,7 +77,7 @@ Dr. Philipp Wimmer, Universitätsklinikum St. Pölten
 
 
 [![Logo Hearing4all][1]][2]
-[1]: ../02_cal-symposium-2015/h4a_logo_long3.png
+[1]: 02_cal-symposium-2015/h4a_logo_long3.png
 [2]: http://hearing4all.eu/DE/
 
 <!--![Logo Hearing4all](03_past-events/02_cal-symposium-2015/h4a_logo_long3.png){.img-rounded}-->
