--- a/pages/01_workgroups/cas/publications/2016.md
+++ b/pages/01_workgroups/cas/publications/2016.md
@@ -8,7 +8,7 @@ Lexow G. J., Schurzig D., Gellrich N. C., Lenarz T., Majdani O., Rau Th. S. (201
 
 Rau Th. S., Harbach L., Pawsey N., Kluge M., Erfurt P., Lenarz T., Majdani O. (2016): _Insertion trauma of a cochlear implant electrode array with Nitinol inlay._ Eur Arch Otorhinolaryngol. 273(11):3573-3585. [IF: 1.627].
 
-Roemer A., Köhl U., Majdani O., Klöß S., Falk C., Haumann S., Lenarz T., Kral A., Warnecke A. (2017): _Biohybrid cochlear implants in human neurosensory restoration_. Stem Cell Res Ther. 7(1):148. \[[<span class="glyphicon glyphicon-link" aria-hidden="true"></span> doi](http://dx.doi.org/10.1186/s13287-016-0408-y); [<span class="glyphicon glyphicon-file" aria-hidden="true"></span>](http://stemcellres.biomedcentral.com/track/pdf/10.1186/s13287-016-0408-y?site=stemcellres.biomedcentral.com); IF: 4.504\].
+Roemer A., Köhl U., Majdani O., Klöß S., Falk C., Haumann S., Lenarz T., Kral A., Warnecke A. (2017): _Biohybrid cochlear implants in human neurosensory restoration_. Stem Cell Res Ther. 7(1):148. \[[<span class="glyphicon glyphicon-file" aria-hidden="true"></span>](http://stemcellres.biomedcentral.com/track/pdf/10.1186/s13287-016-0408-y?site=stemcellres.biomedcentral.com); [<span class="glyphicon glyphicon-link" aria-hidden="true"></span> doi](http://dx.doi.org/10.1186/s13287-016-0408-y); IF: 4.504\].
 
 Schurzig D., Lexow G. J., Majdani O., Lenarz Th., Rau Th. S. (2016): _Three-dimensional modeling of the cochlea by use of an arc fitting approach_. Comput Methods Biomech Biomed Engin. 19(16):1785-1799. [IF: 1.850].
 
